# django-htmx-starter

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  TODOS.md  build.sh  docker-compose.yml  justfile  pyproject.toml  railway.toml
.claude/skills/adr/: SKILL.md
.githooks/: post-checkout
.github/workflows/: ci.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  tests.py  views.py
core/migrations/: 0001_initial.py
docs/adr/: 0001-initial-project.md
docs/issues/payments-scaffold/: issues.md  prd.md
payments/: admin.py  decorators.py  mock.py  services.py  signals.py  tests.py  urls.py  views.py
payments/management/commands/: seed_payments.py
scripts/: add_payments.py  worktree-helpers.sh
templates/: 404.html  500.html  EXAMPLES.md  counter.html  dashboard.html  home.html
templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  signup.html
templates/cotton/: auth_card.html  counter.html  footer.html  form_field.html  header.html  layout.html  toast.html  toast_oob.html  toasts.html
templates/payments/: cancel.html  pricing.html  success.html
tests/: test_add_payments.py  test_worktree.sh
theme/static_src/src/: styles.css
