[project]
name = "django-htmx-starter"
version = "0.1.0"
description = "A Django + HTMX + Tailwind CSS starter template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2.11",
    "django-allauth[socialaccount]>=65.14.3",
    "django-cotton>=2.6.1",
    "django-htmx>=1.27.0",
    "django-tailwind[reload]>=4.2.0",
    "gunicorn>=25.1.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.41.0",
    "whitenoise>=6.12.0",
    "dj-stripe>=2.9.2",
]
